--- a/metadata.yaml
+++ b/metadata.yaml
@@ -31,6 +31,7 @@ subjects:
 - !lcsh 'Short stories, Italian'
 - !lcc 'PQ'
 - !lcsh 'Italian fiction'
+- GITenberg
 tableOfContents: L'imperfetto amante (Nino Stresa) -- L'imperfetto amante (Giustino
   Morelli) -- Il perfetto amante (Massimo Dias) -- Il perfettissimo amante (Luigi
   Caracciolo) -- Il viale degli oleandri (Mario Felice) -- Nella via (Vicenzella)
